--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-/build
-/cert.pem
-/dist
-/key.pem
-/lib
+**/build
+**/cert.pem
+**/dist
+**/key.pem
+**/lib
 **/node_modules
-/packages/
-/*.log
-.DS_Store
+*/packages
+**/*.log
+**/.DS_Store
 **/.idea
-/.tmp
